# esp32-robot-lfd

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
configs/: arm_calibration.yaml  training_config.yaml
docs/: NOTION_PROJECT_TEMPLATE.md
firmware/esp32_arm_controller/: platformio.ini
firmware/esp32_arm_controller/src/: config.h  main.cpp
firmware/esp32_cam_observer/: platformio.ini
firmware/esp32_cam_observer/src/: main.cpp
host/: __init__.py
host/data_collection/: __init__.py  teleop_recorder.py
host/deployment/: __init__.py  realtime_control.py
host/training/: __init__.py  behavioral_cloning.py
host/utils/: __init__.py
scripts/: collect_demo.sh  run_inference.sh  train_policy.sh
