[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "esp32-robot-lfd"
version = "0.1.0"
description = "Learning from Demonstration pipeline for ESP32-based robot manipulation"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Goker", email = "goker@example.com"}
]
keywords = [
    "robot-learning",
    "imitation-learning",
    "learning-from-demonstration",
    "behavioral-cloning",
    "diffusion-policy",
    "ESP32",
    "robot-manipulation",
    "teleoperation",
    "embedded-robotics",
    "LeRobot"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Robotics",
]
dependencies = [
    "torch>=2.0.0",
    "numpy>=1.24.0",
    "h5py>=3.8.0",
    "opencv-python>=4.8.0",
    "websockets>=11.0",
    "requests>=2.31.0",
    "tqdm>=4.65.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]
lerobot = [
    "lerobot>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/goker/esp32-robot-lfd"
Documentation = "https://github.com/goker/esp32-robot-lfd#readme"
Repository = "https://github.com/goker/esp32-robot-lfd.git"
Issues = "https://github.com/goker/esp32-robot-lfd/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["host*", "simulation*"]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "W"]
ignore = ["E501"]
